fix: spacing of wide code blocks

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -110,6 +110,9 @@ pre {
   line-height: 2rem;
   margin: 0;
   padding: 1rem;
+  & code {
+    margin-right: 1rem;
+  }
 }
 
 table {
